src/css/partials/_status_bar.css
@import "_vars.css";
@import "_media_rules.css";

.status-bar {

  @media (--desktop){
    lost-row: 1/8;
    lost-utility: clearfix;
  };
  border-top:1px dashed var(--base00);
  
  .problem-mode{
    visibility: hidden;
    @media (--desktop) {lost-column: 2/3;}
  }

  .external-tools-down {
    @media (--desktop) {lost-column: 1/3;}
    
    .incident-number{
      .number{
        color: var(--yellow);
        font-size:2rem;
      }
    }
  }
}

  .status-bar.alert .problem-mode{
    @media (--desktop) {lost-column: 2/3;}
    background-color: var(--red);
    h2 {color: var(--base2);
    font-size: 3em;}
    text-align:center;
    ::before{
      content:"⚠︎  ";
    }
    visibility: visible;
  }

